[package]
name = "airdrophammer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.44.0"
shuttle-runtime = "0.44.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.26.0"
tracing = "0.1.37"
regex = "1"
unicode-normalization = "0.1"
shuttle-service = "0.44.0"
